# seehydro-water-seg

./: .gitignore  CODEX_CONTEXT.md  OPERATION_MANUAL_ZH.md  README.md  pyproject.toml
configs/: segmentation_binary_water.yaml  segmentation_minimal.yaml
docs/: WINDOWS_LINUX_OPERATION_GUIDE.docx  WINDOWS_LINUX_OPERATION_GUIDE.md
scripts/: convert_labelme_to_masks.py  validate_seg_dataset.py
src/seehydro/: __init__.py  cli.py
src/seehydro/acquisition/: highres.py  tile_downloader.py
src/seehydro/export/: report.py  vector_io.py  visualization.py
src/seehydro/extraction/: canal_params.py  geo_measure.py
src/seehydro/models/: inference.py  seg_model.py
src/seehydro/preprocessing/: tiling.py
src/seehydro/training/: augmentation.py  train_seg.py
tests/unit/: test_canal_params.py  test_cli.py  test_convert_labelme_to_masks.py  test_tile_downloader.py  test_tiling.py  test_training_guards.py
