[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seehydro"
version = "0.1.0"
description = "南水北调中线工程参数遥感提取系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # GIS/遥感
    "earthengine-api>=0.1.390",
    "geemap>=0.32.0",
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "osmnx>=1.9.0",
    "contextily>=1.5.0",
    "xarray>=2024.1.0",
    "rioxarray>=0.15.0",
    # 深度学习
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "segmentation-models-pytorch>=0.3.3",
    "ultralytics>=8.1.0",
    "albumentations>=1.3.0",
    # 图像处理
    "opencv-python-headless>=4.9.0",
    "scikit-image>=0.22.0",
    # 数据分析与可视化
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "folium>=0.15.0",
    "openpyxl>=3.1.0",
    # 工程支撑
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyterlab>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
seehydro = "seehydro.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
